tests/qd/compile_errors/module_dir_no_entry.qd
// Test error message for directory without module.qd
use badmodule

fn main( -- ) {
	42 prints nl
}
